--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    max-width: 600px;
+    max-width: 700px;
     margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
@@ -32,6 +32,7 @@ form {
 
 input {
     margin-top: -16px;
+    padding: 8px;
 }
 
 button {
