--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 
 body {
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
 }
 
 .hidden {
@@ -16,7 +17,8 @@ body {
 }
 
 h1 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    font-weight: 700;
 }
 
 h1 span {
